force-app/main/default/objects/Order_Activated__e/Order_Activated__e.object-meta.xml
<CustomObject>
    <description>Fired by OrderTriggerHandler.afterUpdate whenever an Order transitions to Status=Activated. Subscribed by the platform-event trigger that hands off to SapSalesOrderService for SAP SD posting (ADR-023). Decoupling SF-side activation from outbound SAP integration via this event lets the activation transaction commit cleanly before any SAP callout runs (avoids "uncommitted work pending" on synchronous push patterns).</description>
    <label>Order Activated</label>
    <pluralLabel>Order Activated Events</pluralLabel>
</CustomObject>