force-app/main/default/objects/Order_Activated__e/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <description>Account name at activation time. Used in error log Correlation_Id__c when SAP push fails (ADR-013), so the audit log row carries human context.</description>
    <label>Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>