force-app/main/default/objects/Order_Activated__e/fields/Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Order_Id__c</fullName>
    <description>The Salesforce Order Id whose activation triggered the event. Subscribed handler uses this to look up Order + OrderItems + Account when building the SAP SD payload.</description>
    <label>Order Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>