force-app/main/default/objects/Order_Activated__e/fields/Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Number__c</fullName>
    <description>Convenience field for logging and audit messages. SAP integration code primarily uses Order_Id__c.</description>
    <label>Order Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>