force-app/main/default/objects/Order_Activated__e/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <description>Order TotalAmount at activation time. Used in payload preview + error logs.</description>
    <label>Total Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>